chore: better styling

--- a/tools/tester/tester.html
+++ b/tools/tester/tester.html
@@ -6,6 +6,10 @@
     <link rel="icon" href="data:,">
     <script src="franklin-fragment.js" type="module"></script>
     <style>
+        body {
+            background-color: #ddd;
+        }
+        
         main {
             padding: 32px;
         }
